refactor: 피드백 관련 사항 리팩토링 및 editMap 로드 시 err 발생 부분 수정